tests/paczka1/small_fuzzy/72219190.err
Error in line 2: Uti7Duf0h S370 34,3
Error in line 10: 4b1z S370 75,4
Error in line 14: 4b1z S654 5,0
